--- a/src/app/challenge/challenge/challenge-middle/challenge-middle.component.html
+++ b/src/app/challenge/challenge/challenge-middle/challenge-middle.component.html
@@ -2,7 +2,12 @@
   <div class="challenge-middle__header">Найдите (кликните) букву <span class="challenge-middle__letter">{{ letter }}</span> в слове:</div>
   <div class="challenge-middle__container">
     <ul class="challenge-middle__list">
-      <li class="challenge-middle__item" *ngFor="let item of items" (click)="onSelect(item)">{{ item }}</li>
+      <li
+        class="challenge-middle__item"
+        *ngFor="let item of items" (click)="onSelect(item)"
+        [ngClass]="{'challenge-middle__item--active': item.checked}"
+      >{{ item.char }}</li>
     </ul>
+    <div class="challenge-middle__tooltip">{{ tooltipMessage }}!</div>
   </div>
 </div>
