--- a/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
+++ b/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
@@ -3,6 +3,10 @@
   padding: 2rem;
   margin-bottom: 2rem;
 
+  &__header {
+    text-align: center;
+  }
+
   &__letter {
     font-size: 2rem;
     color: darkred;
@@ -14,6 +18,8 @@
     padding: 0;
     margin: 0;
     display: flex;
+    justify-content: center;
+    align-items: flex-start;
   }
 
   &__item {
@@ -27,6 +33,10 @@
   }
 
   &__tooltip {
-    text-transform: capitalize;
+    display: inline-block;
+    padding: .2rem 1rem;
+    border-radius: 1rem;
+    background-color: dodgerblue;
+    margin-left: 1rem;
   }
 }
