--- a/src/app/challenge/challenge/challenge-middle/challenge-middle.component.html
+++ b/src/app/challenge/challenge/challenge-middle/challenge-middle.component.html
@@ -7,7 +7,10 @@
         *ngFor="let item of items" (click)="onSelect(item)"
         [ngClass]="{'challenge-middle__item--active': item.checked}"
       >{{ item.char }}</li>
-      <div class="challenge-middle__tooltip">{{ tooltipMessage }}!</div>
+      <div
+        class="tooltip" [className]="tooltipChecked ? 'tooltip--success' : 'tooltip--mistake'"
+        [hidden]="!tooltipShow"
+      >{{ tooltipMessage }}!</div>
     </ul>
   </div>
 </div>
