--- a/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
+++ b/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
@@ -3,6 +3,10 @@
   padding: 2rem;
   margin-bottom: 2rem;
 
+  &__container {
+    text-align: center;
+  }
+
   &__header {
     text-align: center;
   }
@@ -15,14 +19,14 @@
 
   &__list {
     list-style-type: none;
-    padding: 0;
+    padding: 0 9rem 0 0;
     margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+    display: inline-block;
+    position: relative;
   }
 
   &__item {
+    display: inline-block;
     margin: 0 .4rem;
     font-size: 3rem;
     cursor: pointer;
@@ -31,12 +35,30 @@
       color: darkred;
     }
   }
+}
 
-  &__tooltip {
-    display: inline-block;
+.tooltip {
+  //
+
+  &--success {
+    background-color: forestgreen;
     padding: .2rem 1rem;
     border-radius: 1rem;
-    background-color: dodgerblue;
     margin-left: 1rem;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
+  }
+
+  &--mistake {
+    background-color: firebrick;
+    padding: .2rem 1rem;
+    border-radius: 1rem;
+    margin-left: 1rem;
+    color: white;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
