fix: refactor some styles

--- a/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
+++ b/src/app/challenge/challenge/challenge-middle/challenge-middle.component.scss
@@ -35,6 +35,10 @@
       text-transform: uppercase;
     }
 
+    &:hover {
+      color: forestgreen;
+    }
+
     &--active {
       color: darkred;
     }
