--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,1 +1,4 @@
-<p>home works!</p>
+<div class="alphabet">
+  <h2 class="alphabet__title">{{ title }}</h2>
+  <button type="button" class="btn btn-success btn-lg text-capitalize mt-4" (click)="onClick()">go to challenge</button>
+</div>
