--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link text-capitalize" routerLink="challenge">challenge</a>
+        <a class="nav-link text-capitalize" routerLink="challenge" routerLinkActive="active">challenge</a>
       </li>
     </ul>
   </div>
