--- a/src/app/challenge/challenge/challenge-down/challenge-down.component.scss
+++ b/src/app/challenge/challenge/challenge-down/challenge-down.component.scss
@@ -16,8 +16,11 @@
     text-decoration: none;
 
     &--active {
-      color: darkred;
       text-decoration: underline;
+    }
+
+    &--checked {
+      color: darkred;
     }
   }
 }
