--- a/src/app/home/home/home.component.scss
+++ b/src/app/home/home/home.component.scss
@@ -7,3 +7,15 @@
     font-size: 8rem;
   }
 }
+
+@media (max-width: 576px) {
+  .alphabet__title {
+    font-size: 5rem;
+  }
+}
+
+@media (max-width: 400px) {
+  .alphabet__title {
+    font-size: 3rem;
+  }
+}
